@@ -496,8 +496,8 @@ size_t get_page_start(size_t column);
 void reset_cursor(void);
 void add_marked_sameline(int begin, int end, filestruct *fileptr, int y,
 			 int virt_cur_x, int this_page);
-void edit_add(const filestruct *fileptr, const char *converted,
-		int yval, size_t start);
+void edit_add(const filestruct *fileptr, const char *converted, int
+	yval, size_t start);
 void update_line(const filestruct *fileptr, size_t index);
 void update_cursor(void);
 void center_cursor(void);
